--- a/Consumer/pom.xml
+++ b/Consumer/pom.xml
@@ -213,6 +213,13 @@
 			<artifactId>Provider</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.7</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>Consumer</finalName>
