--- a/Provider/java/main/resource/META-INF/spring/db.properties
+++ b/Provider/java/main/resource/META-INF/spring/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.40.14:3306/hypervideo
+jdbc.url=jdbc:mysql://localhost:3307/hypervideo_test
 jdbc.username=root
-jdbc.password=!QAZ2wsx
+jdbc.password=root
