--- a/Consumer/src/main/resources/log4j.properties
+++ b/Consumer/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.Threshold=WARN
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=[yygwt] %d - %c -%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=[zsclayout] %d - %c -%-4r [%t] %-5p %c %x - %m%n
 log4j.logger.org.apache.commons.beanutils=ERROR
 #log4j.appender.DATABASE.sql=INSERT INTO LOG4J (Message) VALUES ('[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n')
 #log4j.appender.DATABASE.layout=org.apache.log4j.PatternLayout
